Icon button and more improvements.

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,6 +3,14 @@
 <head>
   <title>Material Components</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: #eee;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+  </style>
 </head>
 <body>
   <app></app>
