Drawers. (But no demo page yet.)

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,11 +3,11 @@
 <head>
   <title>Material Components</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
       margin: 0;
       padding: 0;
-      background: #eee;
     }
   </style>
 </head>
