Remove the demo code. It has moved to its own repo.

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,20 +2,11 @@
 <html>
 <head>
   <title>Material Components</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono">
-  <link rel="stylesheet" href="dist/bundle.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-    }
-  </style>
 </head>
 <body>
-  <app></app>
-  <script type="text/javascript" src="dist/bundle.js"></script>
+  <p>
+    The demo has moved <a href="https://hperrin.github.io/svelte-material-ui-demo/">here</a>.
+  </p>
 </body>
 </html>
