--- a/component-demos/TopAppBar/demo.html
+++ b/component-demos/TopAppBar/demo.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Top App Bar - Standard</title>
+  <title>Top App Bar</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="../../dist/TopAppBar-Standard.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono">
+  <link rel="stylesheet" href="../../dist/top-app-bar.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
@@ -20,6 +22,6 @@
 </head>
 <body>
   <app></app>
-  <script type="text/javascript" src="../../dist/TopAppBar-Standard.js"></script>
+  <script type="text/javascript" src="../../dist/top-app-bar.js"></script>
 </body>
 </html>
