chore: moved all the demo files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono">
-  <link rel="stylesheet" href="dist/bundle.css">
+  <link rel="stylesheet" href="site/dist/bundle.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
@@ -16,6 +16,6 @@
 </head>
 <body>
   <app></app>
-  <script type="text/javascript" src="dist/bundle.js"></script>
+  <script type="text/javascript" src="site/dist/bundle.js"></script>
 </body>
 </html>
