chore: site tweaks

--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Material Components</title>
+  <title>Svelte Material UI</title>
+  <meta charset="utf-8">
+  <meta name="description" content="Material UI Components for Svelte 3, ready to use in your apps.">
+
+  <!-- Twitter Card data -->
+  <meta name="twitter:card" value="summary">
+  <meta name="twitter:site" content="@SciActive">
+  <meta name="twitter:title" content="Svelte Material UI">
+  <meta name="twitter:description" content="Material UI Components for Svelte 3, ready to use in your apps.">
+  <meta name="twitter:creator" content="@SciActive">
+  <meta name="twitter:image" content="https://sveltematerialui.com/site/header.png">
+
+  <!-- Open Graph data -->
+  <meta property="og:title" content="Svelte Material UI" />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="https://sveltematerialui.com/" />
+  <meta property="og:image" content="https://sveltematerialui.com/site/header.png" />
+  <meta property="og:description" content="Material UI Components for Svelte 3, ready to use in your apps." />
+
+  <!-- Fonts and CSS -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono">
   <link rel="stylesheet" href="site/dist/bundle.css">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <style>
-    body {
+    html, body {
       margin: 0;
       padding: 0;
     }
