chore: add site icons and a Twitter link

--- a/index.html
+++ b/index.html
@@ -20,6 +20,25 @@
   <meta property="og:image" content="https://sveltematerialui.com/site/header.png" />
   <meta property="og:description" content="Material UI Components for Svelte 3, ready to use in your apps." />
 
+  <!-- Icons -->
+  <link rel="apple-touch-icon" sizes="57x57" href="site/icons/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="site/icons/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="site/icons/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="site/icons/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="site/icons/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="site/icons/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="site/icons/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="site/icons/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="site/icons/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="site/icons/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="site/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="site/icons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="site/icons/favicon-16x16.png">
+  <link rel="manifest" href="site/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
+
   <!-- Fonts and CSS -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700">
