chore: improve meta tags

--- a/index.html
+++ b/index.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html prefix="og: http://ogp.me/ns#">
 <head>
   <title>Svelte Material UI</title>
   <meta charset="utf-8">
   <meta name="description" content="Material UI Components for Svelte 3, ready to use in your apps.">
 
   <!-- Twitter Card data -->
-  <meta name="twitter:card" value="summary">
+  <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@SciActive">
-  <meta name="twitter:title" content="Svelte Material UI">
-  <meta name="twitter:description" content="Material UI Components for Svelte 3, ready to use in your apps.">
   <meta name="twitter:creator" content="@SciActive">
-  <meta name="twitter:image" content="https://sveltematerialui.com/site/header.png">
 
   <!-- Open Graph data -->
   <meta property="og:title" content="Svelte Material UI" />
-  <meta property="og:type" content="article" />
   <meta property="og:url" content="https://sveltematerialui.com/" />
   <meta property="og:image" content="https://sveltematerialui.com/site/header.png" />
   <meta property="og:description" content="Material UI Components for Svelte 3, ready to use in your apps." />
+  <meta property="og:type" content="website" />
 
   <!-- Icons -->
   <link rel="apple-touch-icon" sizes="57x57" href="site/icons/apple-icon-57x57.png">
