feat: remove FOUC on Sapper installation instructions

--- a/site/src/template.html
+++ b/site/src/template.html
@@ -51,6 +51,9 @@
 
   %sapper.base%
 
+  <!-- SMUI Styles -->
+  <link rel="stylesheet" href="client/smui.css">
+
   <!-- Sapper creates a <script> tag containing `src/client.js`
        and anything else it needs to hydrate the app and
        initialise the router -->
