docs: add dark theme to site

--- a/site/src/template.html
+++ b/site/src/template.html
@@ -52,7 +52,8 @@
   %sapper.base%
 
   <!-- SMUI Styles -->
-  <link rel="stylesheet" href="client/smui.css">
+  <link rel="stylesheet" href="client/smui.css" media="(prefers-color-scheme: light)">
+  <link rel="stylesheet" href="client/smui-dark.css" media="screen and (prefers-color-scheme: dark)">
 
   <!-- Sapper creates a <script> tag containing `src/client.js`
        and anything else it needs to hydrate the app and
