docs: fix code highlighting to match styles and not mangle regexes

--- a/packages/site/src/app.html
+++ b/packages/site/src/app.html
@@ -114,10 +114,10 @@
       href="https://fonts.googleapis.com/css?family=Roboto+Mono"
     />
 
-    <!-- Prism Theme (For Markdown Pages) -->
+    <!-- Highlight.js Theme (For Markdown Pages) -->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/prismjs@1.23.0/themes/prism.min.css"
+      href="https://cdn.jsdelivr.net/npm/highlight.js@11.3.1/styles/obsidian.css"
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
