--- a/packages/site/src/app.html
+++ b/packages/site/src/app.html
@@ -157,6 +157,12 @@
       media="screen and (prefers-color-scheme: dark)"
     />
 
+    <!-- It Matters -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/itmatters@1.0.0/index.css"
+    />
+
     %svelte.head%
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -174,7 +180,7 @@
       gtag('config', 'G-79MKYND6TX');
     </script>
   </head>
-  <body>
+  <body class="ukraine">
     <div id="smui-app">%svelte.body%</div>
   </body>
 </html>
