--- a/packages/site/src/app.html
+++ b/packages/site/src/app.html
@@ -29,77 +29,77 @@
     <link
       rel="apple-touch-icon"
       sizes="57x57"
-      href="%svelte.assets%/icons/apple-icon-57x57.png"
+      href="%sveltekit.assets%/icons/apple-icon-57x57.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="60x60"
-      href="%svelte.assets%/icons/apple-icon-60x60.png"
+      href="%sveltekit.assets%/icons/apple-icon-60x60.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="72x72"
-      href="%svelte.assets%/icons/apple-icon-72x72.png"
+      href="%sveltekit.assets%/icons/apple-icon-72x72.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="76x76"
-      href="%svelte.assets%/icons/apple-icon-76x76.png"
+      href="%sveltekit.assets%/icons/apple-icon-76x76.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="114x114"
-      href="%svelte.assets%/icons/apple-icon-114x114.png"
+      href="%sveltekit.assets%/icons/apple-icon-114x114.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="120x120"
-      href="%svelte.assets%/icons/apple-icon-120x120.png"
+      href="%sveltekit.assets%/icons/apple-icon-120x120.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="144x144"
-      href="%svelte.assets%/icons/apple-icon-144x144.png"
+      href="%sveltekit.assets%/icons/apple-icon-144x144.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="152x152"
-      href="%svelte.assets%/icons/apple-icon-152x152.png"
+      href="%sveltekit.assets%/icons/apple-icon-152x152.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="%svelte.assets%/icons/apple-icon-180x180.png"
+      href="%sveltekit.assets%/icons/apple-icon-180x180.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="192x192"
-      href="%svelte.assets%/icons/android-icon-192x192.png"
+      href="%sveltekit.assets%/icons/android-icon-192x192.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="%svelte.assets%/icons/favicon-32x32.png"
+      href="%sveltekit.assets%/icons/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="96x96"
-      href="%svelte.assets%/icons/favicon-96x96.png"
+      href="%sveltekit.assets%/icons/favicon-96x96.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="%svelte.assets%/icons/favicon-16x16.png"
+      href="%sveltekit.assets%/icons/favicon-16x16.png"
     />
-    <link rel="manifest" href="%svelte.assets%/manifest.json" />
+    <link rel="manifest" href="%sveltekit.assets%/manifest.json" />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta
       name="msapplication-TileImage"
-      content="%svelte.assets%/ms-icon-144x144.png"
+      content="%sveltekit.assets%/ms-icon-144x144.png"
     />
     <meta name="theme-color" content="#ffffff" />
 
@@ -133,7 +133,7 @@
       }
     </style>
 
-    %svelte.head%
+    %sveltekit.head%
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
@@ -151,6 +151,6 @@
     </script>
   </head>
   <body class="ukraine">
-    <div id="smui-app">%svelte.body%</div>
+    <div id="smui-app">%sveltekit.body%</div>
   </body>
 </html>
