chore: add trans rights message

--- a/packages/site/src/app.html
+++ b/packages/site/src/app.html
@@ -150,7 +150,7 @@
       gtag('config', 'G-79MKYND6TX');
     </script>
   </head>
-  <body class="ukraine">
+  <body class="ukraine transrights">
     <div id="smui-app">%sveltekit.body%</div>
   </body>
 </html>
