--- a/packages/site/src/app.html
+++ b/packages/site/src/app.html
@@ -104,17 +104,15 @@
     <meta name="theme-color" content="#ffffff" />
 
     <!-- Fonts and CSS -->
+
+    <!-- Hint where we get fonts from. -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Material Icons, Roboto, and Roboto Mono fonts -->
     <link
+      href="https://fonts.googleapis.com/css2?family=Material+Icons&Roboto+Mono:ital@0;1&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto+Mono"
     />
 
     <!-- Highlight.js Theme (For Markdown Pages) -->
